# Aind.Experiment.VrForaging-OpenEphys

./: .gitmodules  README.md  main.py  pyproject.toml
examples/: clabe.yml
scripts/: deploy.ps1  ephys_aligment.ipynb  ephys_transfer.ipynb  metadata generation v2.ipynb  metadata_utils.py  parameters.json
